ingress/didactic-unit-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-didactic-unit-ingress
  namespace: cetpro
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /didactic-unit/(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-didactic-unit
                port:
                  number: 8087
